# ReadCSV_ComfyUI

./: README.md  __init__.py  pyproject.toml  readcsvrow.py
.github/workflows/: publish.yml
CSV/: my_styles.csv
